# gofar

./: .env  Cargo.toml  README.md
src/: main.rs  routes.rs
src/auth/: jwt.rs
src/controller/: auth_controller.rs
